# sorting_networks

./: Cargo.toml  README.md  build.rs  generate.rs
benches/: sort.rs
examples/: format.rs  visitor.rs
src/: debug.rs  lib.rs  utils.rs
